Fixed UA translation

--- a/translations/FirePlayersStats.phrases.txt
+++ b/translations/FirePlayersStats.phrases.txt
@@ -129,13 +129,13 @@
 	{
 		"en"		"Reset my stats"
 		"ru"		"Сбросить мою статистику"
-		"ua"		"Зкинути мою статистику"
+		"ua"		"Стерти мою статистику"
 	}
 	"AreYouSureResetStats"
 	{
 		"en"		"Are you sure reset your stats?"
 		"ru"		"Вы уверены, что сбросить статистику?"
-		"ua"		"Ви впевнені, що хочете зкинути вашу статистику?"
+		"ua"		"Ви впевнені, що хочете стерти вашу статистику?"
 	}
 	"YesImSure"
 	{
