--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
 0.0.1 - Тестирование плагина перед релизом.
 0.0.3 - Minor bug fixes.
 0.0.4 - Minor bug fixes (#3).
+0.0.5 - Changed the structure of the table with weapons. 
+		Added counting hits on hit group. 
+		Small edits in the fake ranks module.
