Update change log

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,3 +4,4 @@
 0.0.5 - Changed the structure of the table with weapons. 
 		Added counting hits on hit group. 
 		Small edits in the fake ranks module.
+1.0.0 - Release.
