Made a couple of small changes. In information menu for session added value of received points.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -14,3 +14,4 @@
 		Added message on stats state.
 		Added information menu.
 		Made a couple of small changes.
+		In information menu for session added value of received points.
