--- a/translations/FirePlayersStats.phrases.txt
+++ b/translations/FirePlayersStats.phrases.txt
@@ -25,6 +25,13 @@
 		"ru"		"[ Fire Players Stats | Главное меню ] \nПоинты: {1} \nУровень: {2} \nРанг: {3}"
 		"ua"		"[ Fire Players Stats | Головне меню ] \nПоінти: {1} \nРівень: {2} \nРанг: {3}"
 	}
+	"FpsTitleNoRanks"
+	{
+		"#format"	"{1:.2f},{2:i},{3:s}"
+		"en"		"[ Fire Players Stats | Main menu ] \nPoints: {1}"
+		"ru"		"[ Fire Players Stats | Главное меню ] \nПоинты: {1}"
+		"ua"		"[ Fire Players Stats | Головне меню ] \nПоінти: {1}"
+	}
 	"MyStats"
 	{
 		"en"		"My stats"
@@ -81,6 +88,13 @@
 		"en"		"Points: {1} \nLevel: {2} \nRank: {3} \nPosition: {4}/{5} \n \nKills: {6} \nDeaths: {7} \nKDR: {8} \nAssists: {9} \nMaximum kills per round: {10} \nRounds played: {11} \nWin rounds: {12} \nLose rounds: {13} \nPlayed time on server: {14} h"
 		"ru"		"Поинты: {1} \nУровень: {2} \nРанг: {3} \nМесто: {4}/{5} \n \nУбийств: {6} \nСмертей: {7} \nKDR: {8} \nАссистов: {9} \nМаксимум убийств за раунд: {10} \nРаундов сыграно: {11} \nВыиграно: {12} \nПроиграно: {13} \nНаигранное время на сервере: {14} ч"
 		"ua"		"Поінти: {1} \nРівень: {2} \nРанг: {3} \nМісце: {4}/{5} \n \nВбивств: {6} \nСмертей: {7} \nKDR: {8} \nАсистів: {9} \nМаксимум вбивств за раунд: {10} \nРаундів відіграно: {11} \nВиграно: {12} \nПрограно: {13} \nНаграний час на сервері: {14} г"
+	}
+	"PlayerDataNoRanks"
+	{
+		"#format"	"{1:.2f},{2:i},{3:i},{4:i},{5:i},{6:.2f},{7:i},{8:i},{9:i},{10:i},{11:i},{12:.2f}"
+		"en"		"Points: {1} \nPosition: {2}/{3} \n \nKills: {4} \nDeaths: {5} \nKDR: {6} \nAssists: {7} \nMaximum kills per round: {8} \nRounds played: {9} \nWin rounds: {10} \nLose rounds: {11} \nPlayed time on server: {12} h"
+		"ru"		"Поинты: {1} \nМесто: {2}/{3} \n \nУбийств: {4} \nСмертей: {5} \nKDR: {6} \nАссистов: {7} \nМаксимум убийств за раунд: {8} \nРаундов сыграно: {9} \nВыиграно: {10} \nПроиграно: {11} \nНаигранное время на сервере: {12} ч"
+		"ua"		"Поінти: {1} \nМісце: {2}/{3} \n \nВбивств: {4} \nСмертей: {5} \nKDR: {6} \nАсистів: {7} \nМаксимум вбивств за раунд: {8} \nРаундів відіграно: {9} \nВиграно: {10} \nПрограно: {11} \nНаграний час на сервері: {12} г"
 	}
 
 	"SessionStats"
