Added top the maximum of kills per round

--- a/translations/FirePlayersStats.phrases.txt
+++ b/translations/FirePlayersStats.phrases.txt
@@ -50,6 +50,12 @@
 		"ru"		"Топ по наиграному времени"
 		"ua"		"Топ по награному часу"
 	}
+	"TopClutch"
+	{
+		"en"		"Top the maximum kills per round"
+		"ru"		"Топ максимальных убиств за раунд"
+		"ua"		"Топ максимальних вбисвст за раунд"
+	}
 	"RanksInfo"
 	{
 		"en"		"Ranks info"
@@ -118,6 +124,28 @@
 		"ru"		"[ {1} ] \nИнформация обновляется через определенное время"
 		"ua"		"[ {1} ] \nІнформація оновлюеться через певний час"
 	}
+
+	"Points"
+	{
+		"en"		"Points"
+		"ru"		"Поинтов"
+		"ua"		"Поінтів"
+	}
+
+	"Hours"
+	{
+		"en"		"h."
+		"ru"		"ч."
+		"ua"		"г."
+	}
+	
+	"Kills"
+	{
+		"en"		"Kills"
+		"ru"		"Убийств"
+		"ua"		"Вбивств"
+	}
+
 	"NoPlayers"
 	{
 		"en"		"No players"
