--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,4 @@
-0.0.1 - Тестирование плагина перед релизом.
+0.0.1 - Testing the plugin before release.
 0.0.3 - Minor bug fixes.
 0.0.4 - Minor bug fixes (#3).
 0.0.5 - Changed the structure of the table with weapons. 
@@ -17,3 +17,8 @@
 		In information menu for session added value of received points. 
 		Added native FPS_IsCalibration. 
 		DAgain attempt to disable scoring for win / lose for connected players.
+1.1.1 - Add forward FPS_PlayerPosition.
+		Added display of time when statistics can be reset. 
+		Changed default value for "sm_fps_reset_stats_time" on "90000"
+		Added top the maximum of kills per round. Command sm_clutch.
+		Added the ability to disable the ranks.
