--- a/CHANGELOG
+++ b/CHANGELOG
@@ -22,3 +22,9 @@
 		Changed default value for "sm_fps_reset_stats_time" on "90000"
 		Added top the maximum of kills per round. Command sm_clutch.
 		Added the ability to disable the ranks.
+1.2.1 - Fixed minor bug with setting ranks when connecting a new player.
+		Forward FPS_OnLevelChange now called and on completion of calibration.
+		Added notification when calibration is finished.
+		Исправлена незначительная ошибка с установкой рангов при подключении нового игрока.
+		Форвард FPS_OnLevelChange теперь вызывается и по завершении калибровки.
+		Добавлено уведомление при окончании калибровки.
