--- a/CHANGELOG
+++ b/CHANGELOG
@@ -28,3 +28,4 @@
 1.2.2 - Small optimization.
 		Fixed a possible leak when the reconnection with the database.
 		Fixed point with no valid handloom when you call forward FPS_On Database Connected.
+1.2.3 - Added server ID generation. Works only with SteamWorks.
