Added table with the Intel about servers. Fixed other moments.

--- a/translations/FirePlayersStats.phrases.txt
+++ b/translations/FirePlayersStats.phrases.txt
@@ -91,9 +91,9 @@
 	"PlayerData"
 	{
 		"#format"	"{1:.2f},{2:i},{3:s},{4:i},{5:i},{6:i},{7:i},{8:.2f},{9:i},{10:i},{11:i},{12:i},{13:i},{14:.2f}"
-		"en"		"Points: {1} \nLevel: {2} \nRank: {3} \nPosition: {4}/{5} \n \nKills: {6} \nDeaths: {7} \nKDR: {8} \nAssists: {9} \nMaximum kills per round: {10} \nRounds played: {11} \nWin rounds: {12} \nLose rounds: {13} \nPlayed time on server: {14} h"
-		"ru"		"Поинты: {1} \nУровень: {2} \nРанг: {3} \nМесто: {4}/{5} \n \nУбийств: {6} \nСмертей: {7} \nKDR: {8} \nАссистов: {9} \nМаксимум убийств за раунд: {10} \nРаундов сыграно: {11} \nВыиграно: {12} \nПроиграно: {13} \nНаигранное время на сервере: {14} ч"
-		"ua"		"Поінти: {1} \nРівень: {2} \nРанг: {3} \nМісце: {4}/{5} \n \nВбивств: {6} \nСмертей: {7} \nKDR: {8} \nАсистів: {9} \nМаксимум вбивств за раунд: {10} \nРаундів відіграно: {11} \nВиграно: {12} \nПрограно: {13} \nНаграний час на сервері: {14} г"
+		"en"		"Points: {1} \nLevel: {2} \nRank: {3} \nPosition: {4}/{5} \n \nKills: {6} \nDeaths: {7} \nKDR: {8} \nAssists: {9} \nMaximum kills per round: {10} \nRounds played: {11} \nWin rounds: {12} \nLose rounds: {13} \nPlayed time: {14} h"
+		"ru"		"Поинты: {1} \nУровень: {2} \nРанг: {3} \nМесто: {4}/{5} \n \nУбийств: {6} \nСмертей: {7} \nKDR: {8} \nАссистов: {9} \nМаксимум убийств за раунд: {10} \nРаундов сыграно: {11} \nВыиграно: {12} \nПроиграно: {13} \nНаигранное время: {14} ч"
+		"ua"		"Поінти: {1} \nРівень: {2} \nРанг: {3} \nМісце: {4}/{5} \n \nВбивств: {6} \nСмертей: {7} \nKDR: {8} \nАсистів: {9} \nМаксимум вбивств за раунд: {10} \nРаундів відіграно: {11} \nВиграно: {12} \nПрограно: {13} \nНаграний час: {14} г"
 	}
 	"PlayerDataNoRanks"
 	{
@@ -128,8 +128,8 @@
 	"Points"
 	{
 		"en"		"points"
-		"ru"		"поинтов"
-		"ua"		"поінтів"
+		"ru"		"п."
+		"ua"		"п."
 	}
 
 	"Hours"
@@ -142,8 +142,8 @@
 	"Kills"
 	{
 		"en"		"kills"
-		"ru"		"убийств"
-		"ua"		"вбивств"
+		"ru"		"уб."
+		"ua"		"вб."
 	}
 
 	"NoPlayers"
