--- a/CHANGELOG
+++ b/CHANGELOG
@@ -30,3 +30,4 @@
 		Fixed point with no valid handloom when you call forward FPS_On Database Connected.
 1.2.3 - Added server ID generation. Works only with SteamWorks.
 1.2.4 - Added automatic generation of rank settings.
+		Added table with the Intel about servers.
