--- a/FPS_Modules/FPS_HintInfo/translations/FPS_HintInfo.phrases.txt
+++ b/FPS_Modules/FPS_HintInfo/translations/FPS_HintInfo.phrases.txt
@@ -4,9 +4,29 @@
 	{
 		"#format"	"{1:.2f},{2:i},{3:i},{4:i},{5:s}"
 		"en"		"Points: <font color='#b52b2b'>{1}</font>⠀⠀Position: <font color='#2e592b'>{2}/{3}</font>\nLevel: <font color='#1e4c7a'>{4}</font>⠀⠀Rank: <font color='#a65e16'>{5}</font>"
-
 		"ru"		"Поинты: <font color='#7a1e1e'>{1}</font>⠀⠀Поз.: <font color='#2e592b'>{3}/{4}</font>\nУровень: <font color='#1e4c7a'>{2}</font>⠀⠀Ранг: <font color='#a65e16'>{5}</font>"
-
 		"ua"		"Поінти: <font color='#7a1e1e'>{1}</font>⠀⠀Поз.: <font color='#2e592b'>{3}/{4}</font>\nРівень: <font color='#1e4c7a'>{2}</font>⠀⠀Ранг: <font color='#a65e16'>{5}</font>"
+	}
+
+	"ChangeHintStatus"
+	{
+		"#format"	"{1:t}"
+		"en"		"Player statistics display in hint {1}"
+		"ru"		"Отображение статистики игрока в хинте {1}"
+		"ua"		"Відображення статистики гравця в хінті {1}"
+	}
+
+	"Disabled"
+	{
+		"en"		"{RED}Disabled"
+		"ru"		"{RED}Выключено"
+		"ua"		"{RED}Вимкнено"
+	}
+
+	"Enabled"
+	{
+		"en"		"{GREEN}Enabled"
+		"ru"		"{GREEN}Включено"
+		"ua"		"{GREEN}Увімкнено"
 	}
 }
