--- a/CHANGELOG
+++ b/CHANGELOG
@@ -28,8 +28,7 @@
 1.2.2 - Small optimization.
 		Fixed a possible leak when the reconnection with the database.
 		Fixed point with no valid handloom when you call forward FPS_On Database Connected.
-1.3.0 - Added server ID generation. Works only with SteamWorks.
-		Added automatic generation of rank settings.
+1.3.0 - Added automatic generation of rank settings.
 		Added table with the Intel about servers.
 		Removed 2 parameter because of unnecessary in FPS_GetPlayedTime.
 		Removed native FPS_GetSessionData. Instead added new Native FPS_GetStatsData.
