Fix update server ip.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -38,3 +38,4 @@
 		CSGO Colors integration to FPS inc and removed.
 		Optimized getting the current rank.
 		Changed encoding for tables from utf8 to utf8mb4.
+		SteamWorks marked as required.
