Added new natives. Changing layout of statistics menu. Translation edits

--- a/translations/FirePlayersStats.phrases.txt
+++ b/translations/FirePlayersStats.phrases.txt
@@ -18,55 +18,19 @@
 	// ----------------------------------------------
 
 	// Menus & Panels
-	"FpsTitle"
+	"MiniDataTitle"
 	{
-		"#format"	"{1:.2f},{2:i},{3:s}"
-		"en"		"[ Fire Players Stats | Main menu ] \nPoints: {1} \nLevel: {2} \nRank: {3}"
-		"ru"		"[ Fire Players Stats | Главное меню ] \nПоинты: {1} \nУровень: {2} \nРанг: {3}"
-		"ua"		"[ Fire Players Stats | Головне меню ] \nПоінти: {1} \nРівень: {2} \nРанг: {3}"
+		"#format"	"{1:t},{2:.2f},{3:i},{4:s},{5:i},{6:i}"
+		"en"		"[ {1} ] \nPoints: {2} \nLevel: {3} \nRank: {4}  \nPosition: {5}/{6}"
+		"ru"		"[ {1} ] \nПоинты: {2} \nУровень: {3} \nРанг: {4} \nМесто: {5}/{6}"
+		"ua"		"[ {1} ] \nПоінти: {2} \nРівень: {3} \nРанг: {4} \nМісце: {5}/{6}"
 	}
-	"FpsTitleNoRanks"
+	"MiniDataTitleNoRanks"
 	{
-		"#format"	"{1:.2f},{2:i},{3:s}"
-		"en"		"[ Fire Players Stats | Main menu ] \nPoints: {1}"
-		"ru"		"[ Fire Players Stats | Главное меню ] \nПоинты: {1}"
-		"ua"		"[ Fire Players Stats | Головне меню ] \nПоінти: {1}"
-	}
-	"MyStats"
-	{
-		"en"		"My stats"
-		"ru"		"Моя статистика"
-		"ua"		"Моя статистика"
-	}
-	"TopTen"
-	{
-		"en"		"Top players"
-		"ru"		"Топ игроков"
-		"ua"		"Топ гравців"
-	}
-	"TopTime"
-	{
-		"en"		"Top played time"
-		"ru"		"Топ по наиграному времени"
-		"ua"		"Топ по награному часу"
-	}
-	"TopClutch"
-	{
-		"en"		"Top the maximum kills per round"
-		"ru"		"Топ максимальных убиств за раунд"
-		"ua"		"Топ максимальних вбисвст за раунд"
-	}
-	"RanksInfo"
-	{
-		"en"		"Ranks info"
-		"ru"		"Информация о рангах"
-		"ua"		"Інформація про ранги"
-	}
-	"StatsInfo"
-	{
-		"en"		"Stats info"
-		"ru"		"Информация о статистике"
-		"ua"		"Інформація про статистику"
+		"#format"	"{1:t},{2:.2f},{3:i},{4:s}"
+		"en"		"[ {1} ] \nPoints: {2} \nPosition: {3}/{4}"
+		"ru"		"[ {1} ] \nПоинты: {2} \nМесто: {3}/{4}"
+		"ua"		"[ {1} ] \nПоінти: {2} \nМісце: {3}/{4}"
 	}
 
 	"Back"
@@ -82,63 +46,18 @@
 		"ua"		"Вихід"
 	}
 
-	"PlayerTitle"
-	{
-		"en"		"Player stats"
-		"ru"		"Статистика игрока"
-		"ua"		"Статистика гравця"
-	}
-	"PlayerData"
-	{
-		"#format"	"{1:.2f},{2:i},{3:s},{4:i},{5:i},{6:i},{7:i},{8:.2f},{9:i},{10:i},{11:i},{12:i},{13:i},{14:.2f}"
-		"en"		"Points: {1} \nLevel: {2} \nRank: {3} \nPosition: {4}/{5} \n \nKills: {6} \nDeaths: {7} \nKDR: {8} \nAssists: {9} \nMaximum kills per round: {10} \nRounds played: {11} \nWin rounds: {12} \nLose rounds: {13} \nPlayed time: {14} h"
-		"ru"		"Поинты: {1} \nУровень: {2} \nРанг: {3} \nМесто: {4}/{5} \n \nУбийств: {6} \nСмертей: {7} \nKDR: {8} \nАссистов: {9} \nМаксимум убийств за раунд: {10} \nРаундов сыграно: {11} \nВыиграно: {12} \nПроиграно: {13} \nНаигранное время: {14} ч"
-		"ua"		"Поінти: {1} \nРівень: {2} \nРанг: {3} \nМісце: {4}/{5} \n \nВбивств: {6} \nСмертей: {7} \nKDR: {8} \nАсистів: {9} \nМаксимум вбивств за раунд: {10} \nРаундів відіграно: {11} \nВиграно: {12} \nПрограно: {13} \nНаграний час: {14} г"
-	}
-	"PlayerDataNoRanks"
-	{
-		"#format"	"{1:.2f},{2:i},{3:i},{4:i},{5:i},{6:.2f},{7:i},{8:i},{9:i},{10:i},{11:i},{12:.2f}"
-		"en"		"Points: {1} \nPosition: {2}/{3} \n \nKills: {4} \nDeaths: {5} \nKDR: {6} \nAssists: {7} \nMaximum kills per round: {8} \nRounds played: {9} \nWin rounds: {10} \nLose rounds: {11} \nPlayed time on server: {12} h"
-		"ru"		"Поинты: {1} \nМесто: {2}/{3} \n \nУбийств: {4} \nСмертей: {5} \nKDR: {6} \nАссистов: {7} \nМаксимум убийств за раунд: {8} \nРаундов сыграно: {9} \nВыиграно: {10} \nПроиграно: {11} \nНаигранное время на сервере: {12} ч"
-		"ua"		"Поінти: {1} \nМісце: {2}/{3} \n \nВбивств: {4} \nСмертей: {5} \nKDR: {6} \nАсистів: {7} \nМаксимум вбивств за раунд: {8} \nРаундів відіграно: {9} \nВиграно: {10} \nПрограно: {11} \nНаграний час на сервері: {12} г"
-	}
-
-	"SessionStats"
-	{
-		"en"		"Session stats"
-		"ru"		"Статистика за сессию"
-		"ua"		"Статистика за сесію"
-	}
-	"PlayerDataSession"
-	{
-		"#format"	"{1:.2f},{2:i},{3:i},{4:.2f},{5:i},{6:i},{7:i},{8:i}"
-		"en"		"Points: {1} \nKills: {2} \nDeaths: {3} \nKDR: {4} \nAssists: {5} \nRounds played: {6} \nWin rounds: {7} \nLose rounds: {8}"
-		"ru"		"Поинты: {1} \nУбийств: {2} \nСмертей: {3} \nKDR: {4} \nАссистов: {5} \nРаундов сыграно: {6} \nВыиграно: {7} \nПроиграно: {8}"
-		"ua"		"Поінти: {1} \nВбивств: {2} \nСмертей: {3} \nKDR: {4} \nАсистів: {5} \nРаундів відіграно: {6} \nВиграно: {7} \nПрограно: {8}"
-	}
-
-	"TopTitle"
-	{
-		"#format"	"{1:t}"
-		"en"		"[ {1} ] \nInformation is updated after a certain time"
-		"ru"		"[ {1} ] \nИнформация обновляется через определенное время"
-		"ua"		"[ {1} ] \nІнформація оновлюеться через певний час"
-	}
-
 	"Points"
 	{
 		"en"		"points"
 		"ru"		"п."
 		"ua"		"п."
 	}
-
 	"Hours"
 	{
 		"en"		"h."
 		"ru"		"ч."
 		"ua"		"г."
 	}
-	
 	"Kills"
 	{
 		"en"		"kills"
@@ -152,7 +71,6 @@
 		"ru"		"Нет игроков"
 		"ua"		"Немає гравців"
 	}
-
 	"NoRanks"
 	{
 		"en"		"No ranks"
@@ -160,6 +78,112 @@
 		"ua"		"Немає рангів"
 	}
 
+	// ------------------------------------
+	"FpsTitle"
+	{
+		"en"		"Fire Players Stats | Main menu"
+		"ru"		"Fire Players Stats | Главное меню"
+		"ua"		"Fire Players Stats | Головне меню"
+	}
+
+	// ------------------------------------
+	"MainStatsMenu"
+	{
+		"en"		"Player stats"
+		"ru"		"Статистика игрока"
+		"ua"		"Статистика гравця"
+	}
+	"GeneralStats"
+	{
+		"en"		"General stats"
+		"ru"		"Общая статистика"
+		"ua"		"Загальна статистика"
+	}
+	"SessionStats"
+	{
+		"en"		"Session stats"
+		"ru"		"Статистика за сессию"
+		"ua"		"Статистика за сесію"
+	}
+	"ResetPlayerStats"
+	{
+		"en"		"Reset my stats"
+		"ru"		"Сбросить мою статистику"
+		"ua"		"Стерти мою статистику"
+	}
+
+	// ------------------------------------
+	"TopTitle"
+	{
+		"#format"	"{1:t}"
+		"en"		"[ {1} ] \nAttention, information is updated after a certain time"
+		"ru"		"[ {1} ] \nВнимание, информация обновляется через определенное время"
+		"ua"		"[ {1} ] \nУвага, інформація оновлюеться через певний час"
+	}
+	"ListsOfTops"
+	{
+		"en"		"Lists of tops"
+		"ru"		"Списки топов"
+		"ua"		"Списки топів"
+	}
+	"TopPoints"
+	{
+		"en"		"Top players by points"
+		"ru"		"Лучшие игроки по очкам"
+		"ua"		"Кращі гравці по очкам"
+	}
+	"TopKDR"
+	{
+		"en"		"Top players by KDR"
+		"ru"		"Лучшие игроки по KDR"
+		"ua"		"Кращі гравці по KDR"
+	}
+	"TopTime"
+	{
+		"en"		"Top players by played time"
+		"ru"		"Игроки с наибольшим наигранным временем"
+		"ua"		"Гравці з найбільшим награним часом"
+	}
+	"TopClutch"
+	{
+		"en"		"Top players by most kills per round"
+		"ru"		"Лучшие игроки с наибольшим количеством убийств за раунд"
+		"ua"		"Кращі гравці з найбільшою кількістю вбивств за раунд"
+	}
+
+	// ------------------------------------
+	"RanksInfo"
+	{
+		"en"		"Ranks info"
+		"ru"		"Информация о рангах"
+		"ua"		"Інформація про ранги"
+	}
+
+	// ------------------------------------
+	"StatsInfo"
+	{
+		"en"		"Stats info"
+		"ru"		"Информация о статистике"
+		"ua"		"Інформація про статистику"
+	}
+
+	// ------------------------------------
+	"PlayerGeneralData"
+	{
+		"#format"	"{1:.2f},{2:i},{3:i},{4:.2f},{5:i},{6:i},{7:i},{8:i},{9:i},{10:.2f}"
+		"en"		"Points: {1} \nKills: {2} \nDeaths: {3} \nKDR: {4} \nAssists: {5} \nMaximum kills per round: {6} \nRounds played: {7} \nWin rounds: {8} \nLose rounds: {9} \nPlayed time: {10} h"
+		"ru"		"Поинты: {1} \nУбийств: {2} \nСмертей: {3} \nKDR: {4} \nАссистов: {5} \nМаксимум убийств за раунд: {6} \nРаундов сыграно: {7} \nВыиграно: {8} \nПроиграно: {9} \nНаигранное время: {10} ч"
+		"ua"		"Поінти: {1} \nВбивств: {2} \nСмертей: {3} \nKDR: {4} \nАсистів: {5} \nМаксимум вбивств за раунд: {6} \nРаундів відіграно: {7} \nВиграно: {8} \nПрограно: {9} \nНаграний час: {10} г"
+	}
+	"PlayerSessionData"
+	{
+		"#format"	"{1:.2f},{2:i},{3:i},{4:.2f},{5:i},{6:i},{7:i},{8:i}"
+		"en"		"Points: {1} \nKills: {2} \nDeaths: {3} \nKDR: {4} \nAssists: {5} \nRounds played: {6} \nWin rounds: {7} \nLose rounds: {8}"
+		"ru"		"Поинты: {1} \nУбийств: {2} \nСмертей: {3} \nKDR: {4} \nАссистов: {5} \nРаундов сыграно: {6} \nВыиграно: {7} \nПроиграно: {8}"
+		"ua"		"Поінти: {1} \nВбивств: {2} \nСмертей: {3} \nKDR: {4} \nАсистів: {5} \nРаундів відіграно: {6} \nВиграно: {7} \nПрограно: {8}"
+	}
+
+	// ------------------------------------
 	"StatsInfoTitle"
 	{
 		"#format"	"{1:t},{2:.2f}"
@@ -284,12 +308,7 @@
 		"en"		"Mega kill: {1}"
 	}
 
-	"ResetPlayerStats"
-	{
-		"en"		"Reset my stats"
-		"ru"		"Сбросить мою статистику"
-		"ua"		"Стерти мою статистику"
-	}
+	// ------------------------------------
 	"ResetPlayerStatsLock"
 	{
 		"#format"	"{1:.2f}"
@@ -310,7 +329,7 @@
 		"ua"		"Так, я впевнений"
 	}
 
-	// Chat
+	// Chat -------------------------------
 	"ErrorDataLoad"
 	{
 		"en"		"Error data load!"
@@ -382,6 +401,6 @@
 		"#format"	"{1:i}"
 		"en"		"To work statistics need minimum {GREEN}{1} {DEFAULT}players."
 		"ru"		"Для работы статистики нужно минимум {GREEN}{1} {DEFAULT}игрока."
-		"ua"		"Для роботи статистики необхідно мінімумьшт {GREEN}{1} {DEFAULT}гравці."
+		"ua"		"Для роботи статистики необхідно мінімум {GREEN}{1} {DEFAULT}гравці."
 	}
 }
