--- a/translations/FirePlayersStats.phrases.txt
+++ b/translations/FirePlayersStats.phrases.txt
@@ -329,6 +329,14 @@
 		"ua"		"Так, я впевнений"
 	}
 
+	// ------------------------------------
+	"AdditionalMenu"
+	{
+		"en"		"Additionally
+		"ru"		"Дополнительно"
+		"ua"		"Додатково"
+	}
+
 	// Chat -------------------------------
 	"ErrorDataLoad"
 	{
