Changed principle of calling list of tops. Minor fixes

--- a/translations/FirePlayersStats.phrases.txt
+++ b/translations/FirePlayersStats.phrases.txt
@@ -332,7 +332,7 @@
 	// ------------------------------------
 	"AdditionalMenu"
 	{
-		"en"		"Additionally
+		"en"		"Additionally"
 		"ru"		"Дополнительно"
 		"ua"		"Додатково"
 	}
