--- a/FPS_Modules/FPS_HintInfo/translations/FPS_HintInfo.phrases.txt
+++ b/FPS_Modules/FPS_HintInfo/translations/FPS_HintInfo.phrases.txt
@@ -8,7 +8,7 @@
 		"ua"		"Поінти: <font color='#7a1e1e'>{1}</font>⠀⠀Поз.: <font color='#2e592b'>{2}/{3}</font>\nРівень: <font color='#1e4c7a'>{4}</font>⠀⠀Ранг: <font color='#a65e16'>{5}</font>"
 	}
 
-	"ChangeHintStatus"
+	"ChangeHintStatusChat"
 	{
 		"#format"	"{1:t}"
 		"en"		"Player statistics display in hint {1}"
@@ -16,39 +16,39 @@
 		"ua"		"Відображення статистики гравця в хінті {1}"
 	}
 
-	"Disabled"
+	"ChangeHintStatusMenu"
+	{
+		"#format"	"{1:t}"
+		"en"		"Display statistics in hint [{1}]"
+		"ru"		"Отображение статистики в хинте [{1}]"
+		"ua"		"Відображення статистики в хінті [{1}]"
+	}
+
+	"DisabledChat"
 	{
 		"en"		"{RED}disabled"
 		"ru"		"{RED}выключено"
 		"ua"		"{RED}вимкнено"
 	}
 
-	"Enabled"
+	"EnabledChat"
 	{
 		"en"		"{GREEN}enabled"
 		"ru"		"{GREEN}включено"
 		"ua"		"{GREEN}увімкнено"
 	}
 
-	"Message"
+	"Disabled"
 	{
-		"#format"	"{1:t}"
-		"en"		"{1} display of statistics in hint {GREEN}▶ {RED}!fps_hint"
-		"ru"		"{1} отображения статистики в хинте {GREEN}▶ {RED}!fps_hint"
-		"ua"		"{1} відображення статистики в хінті {GREEN}▶ {RED}!fps_hint"
+		"en"		"Disabled"
+		"ru"		"Выключено"
+		"ua"		"Вимкнено"
 	}
 
-	"Disable"
+	"Enabled"
 	{
-		"en"		"Disable"
-		"ru"		"Выключить"
-		"ua"		"Вимкнути"
-	}
-
-	"Enable"
-	{
-		"en"		"Enable"
-		"ru"		"Включить"
-		"ua"		"Увимкнути"
+		"en"		"Enabled"
+		"ru"		"Включено"
+		"ua"		"Увімкнено"
 	}
 }
