--- a/CHANGELOG
+++ b/CHANGELOG
@@ -56,3 +56,4 @@
 		Changed principle of calling list of tops.
 		Fixed menu item buffer size for Cyrillic language.
 		Added new forward FPS_OnSecondDataUpdated.
+		Added mp_randomspawn support for correct saving of statistics in deathmatch.
