--- a/CHANGELOG
+++ b/CHANGELOG
@@ -40,9 +40,9 @@
 		Changed encoding for tables from utf8 to utf8mb4.
 		SteamWorks marked as required.
 		Added rank column in fps_servers_stats. ( ALTER TABLE `fps_servers_stats` ADD `rank` int NOT NULL DEFAULT '0' AFTER `points`; )
-1.3.1 - Fixed bug in menu rank info.
+1.4.0 - Fixed bug in menu rank info.
 		Fixed bug when using sm_fps_create_default_ranks from the server console.
--DEV- - Fixed minor bugs.
+		Fixed minor bugs.
 		Update forvard FPS_OnPointsChangePre. bHeadshot replase handle hEvant.
 		Added new hit zones. Edit the database!
 		Fixed native for disable stats.
