Fixed bug when getting knife in death event

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -58,3 +58,4 @@
 		Added new forward FPS_OnSecondDataUpdated.
 		Added mp_randomspawn support for correct saving of statistics in deathmatch.
 1.4.1 - Added new native FPS_IsExistFeature.
+		Fixed bug when getting knife in death event.
