--- a/CHANGELOG
+++ b/CHANGELOG
@@ -60,3 +60,4 @@
 1.4.1 - Added new native FPS_IsExistFeature.
 		Fixed bug when getting knife in death event.
 		Changed message of total points at end of round.
+		Fixed minor error.
