Stopped support for mode of statistics without ranks

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -64,3 +64,4 @@
 		Fixed timer time for save data.
 		Added native FPS_StatsActive, FPS_GetID.
 		Update source for SM 1.10 compiler.
+		Stopped support for mode of statistics without ranks.
