--- a/translations/FirePlayersStats.phrases.txt
+++ b/translations/FirePlayersStats.phrases.txt
@@ -25,13 +25,13 @@
 		"ru"		"[ {1} ] \nПоинты: {2} \nУровень: {3} \nРанг: {4} \nМесто: {5}/{6}"
 		"ua"		"[ {1} ] \nПоінти: {2} \nРівень: {3} \nРанг: {4} \nМісце: {5}/{6}"
 	}
-	"MiniDataTitleNoRanks"
-	{
-		"#format"	"{1:t},{2:.2f},{3:i},{4:s}"
-		"en"		"[ {1} ] \nPoints: {2} \nPosition: {3}/{4}"
-		"ru"		"[ {1} ] \nПоинты: {2} \nМесто: {3}/{4}"
-		"ua"		"[ {1} ] \nПоінти: {2} \nМісце: {3}/{4}"
-	}
+	// "MiniDataTitleNoRanks"
+	// {
+	// 	"#format"	"{1:t},{2:.2f},{3:i},{4:s}"
+	// 	"en"		"[ {1} ] \nPoints: {2} \nPosition: {3}/{4}"
+	// 	"ru"		"[ {1} ] \nПоинты: {2} \nМесто: {3}/{4}"
+	// 	"ua"		"[ {1} ] \nПоінти: {2} \nМісце: {3}/{4}"
+	// }
 
 	"Back"
 	{
