KV for ranks replaced by ArrayList

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -65,4 +65,4 @@
 		Added native FPS_StatsActive, FPS_GetID.
 		Update source for SM 1.10 compiler.
 		Stopped support for mode of statistics without ranks.
-		Large optimization of work. KV to collect information on weapons replaced by ArrayList.
+		Large optimization of work. KV to collect information on weapons and KV for ranks replaced by ArrayList.
