--- a/CHANGELOG
+++ b/CHANGELOG
@@ -66,3 +66,4 @@
 		Update source for SM 1.10 compiler.
 		Stopped support for mode of statistics without ranks.
 		Large optimization of work. KV to collect information on weapons and KV for ranks replaced by ArrayList.
+		Fixed player count for stats work, excluded observers.
